# fastAPIBlog

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/users/: models.py  routers.py  schemas.py
commands/: init_db.py
config/: app.py  routers.py  settings.py
